# simple-sfml-calculator

./: .gitignore  CMakeLists.txt  README.md
include/: Button.hpp  Calculator.hpp  ExpressionEvaluator.hpp  History.hpp
src/: main.cpp  tests.cpp
